# libkcudf

./: CMakeLists.txt
kcudf/: cudf.cpp  cudf.hh  graph.hh  gwriter.cpp  gwriter.hh  kcudf.cpp  kcudf.hh  reduce.cpp  reduce.hh  swriter.cpp  swriter.hh
tools/: cmd-options.hh  reducer.cpp  translator.cpp
